# gs_utils

./: README.md  TODO.md  pyproject.toml
src/gs_utils/: README.md  __init__.py  __main__.py  utils.py
src/gs_utils/config/: __init__.py  models.py
src/gs_utils/contracts/: README.md  __init__.py  capabilities.py  render.py  scene.py
src/gs_utils/data/: README.md  __init__.py  config.py  contract.py  datasets.py
src/gs_utils/data/colmap/: README.md  __init__.py  colmap.py  parser.py
src/gs_utils/data/estimators/: README.md  __init__.py  contracts.py
src/gs_utils/evaluation/: README.md  __init__.py  api.py  config.py
src/gs_utils/examples/: README.md  vanilla_3dgs.py
src/gs_utils/examples/vanilla_3dgs/: README.md  __init__.py  __main__.py  config.py  scene.py  train.py  viewer.py
src/gs_utils/export/: README.md  __init__.py  ply.py
src/gs_utils/initialization/: README.md  __init__.py  api.py  base.py  builtins.py  checkpoint.py  common.py  config.py  point_cloud.py  random.py  registry.py
src/gs_utils/legacy/: README.md
src/gs_utils/legacy/examples/: README.md  pyproject.toml
src/gs_utils/legacy/examples/benchmarks/: README.md
src/gs_utils/legacy/examples/datasets/: README.md  colmap.py
src/gs_utils/render_components/: README.md  __init__.py  config.py  learnable_cam_to_world_refinement.py  ppisp_component.py  view_dependent_color_mlp.py
src/gs_utils/training/: losses.py
src/gs_utils/utils/: README.md  __init__.py  checkpoints.py  erank.py  exif.py  neighbors.py  optimizers.py  random.py  rotations.py  spherical_harmonics.py  visualization.py
src/gs_utils/viewer/: README.md  __init__.py  extensions.py  host.py  ply_viewer.py
src/gs_utils/viewer/extensions/: README.md  __init__.py  alpha.py  depth.py  geometry.py  normals.py
